--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,48 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+/* @theme inline {
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
+    --font-sans: var(--font-geist-sans);
+    --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    :root {
+        --background: #0a0a0a;
+        --foreground: #ededed;
+    }
+} */
+
+@theme {
+    --color-primary: #0c9a5b;
+    --color-secondary: #1fa76e;
+    --color-green-light: #e8f5e9;
+    --color-light: #f6f4f5;
+    --color-accent: #444444;
+    --color-dark: #3d3b3d;
+    --color-yellow: #ffe082;
+    --color-blue: #664baf;
+    --color-light-gray: #f9f9f9;
+    --color-gray: #ebebf9;
+    --color-orange: #ff8c42;
+    --color-pink: #9c27b0;
+
+    --font-sans: "Inter", sans-serif;
+    --font-mono: "Roboto Mono", monospace;
+    --color-background: #ecedf8;
+    --color-background-light: linear-gradient(135deg, #e8f5e9 0%, #ffffff 100%);
+    --color-background-soft: linear-gradient(120deg, #e8f5e9 0%, #fff8e1 100%);
+    --color-background-green: linear-gradient(160deg, #0c9a5b 0%, #1fa76e 100%);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+    background: var(--color-background-soft);
+    color: var(--color-accent);
+    font-family: Arial, Helvetica, sans-serif;
 }
