--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,23 +1,11 @@
 @import "tailwindcss";
 
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Playfair+Display:wght@400;500;700&family=Cormorant+Garamond:wght@400;500;700&family=Great+Vibes&family=Roboto+Mono:wght@400;500;700&display=swap");
+
 :root {
     --background: #ffffff;
     --foreground: #171717;
 }
-
-/* @theme inline {
-    --color-background: var(--background);
-    --color-foreground: var(--foreground);
-    --font-sans: var(--font-geist-sans);
-    --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --background: #0a0a0a;
-        --foreground: #ededed;
-    }
-} */
 
 @theme {
     --color-primary: #0c9a5b;
@@ -31,10 +19,13 @@
     --color-light-gray: #f9f9f9;
     --color-gray: #ebebf9;
     --color-orange: #ff8c42;
-    --color-pink: #9c27b0;
+    --color-violet: #9c27b0;
 
-    --font-sans: "Inter", sans-serif;
+    --font-sans: "Inter", "Poppins", sans-serif;
     --font-mono: "Roboto Mono", monospace;
+    --font-vibes: "Great Vibes", cursive;
+    --font-playfair: "Playfair Display", "Cormorant Garamond", serif;
+
     --color-background: #ecedf8;
     --color-background-light: linear-gradient(135deg, #e8f5e9 0%, #ffffff 100%);
     --color-background-soft: linear-gradient(120deg, #e8f5e9 0%, #fff8e1 100%);
@@ -42,7 +33,61 @@
 }
 
 body {
-    background: var(--color-background-soft);
     color: var(--color-accent);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--font-sans);
+    font-size: 16px;
+    line-height: 1.6;
+    background: var(--color-background-soft);
+}
+
+/********* TYPOGRAPHY STYLES *********/
+h1,
+h2,
+h3 {
+    font-family: var(--font-playfair);
+}
+
+h1 {
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: 1.2;
+}
+
+h2 {
+    font-size: 2.5rem;
+    font-weight: 600;
+    line-height: 1.3;
+}
+h3 {
+    font-size: 1.9rem;
+    font-weight: 500;
+    line-height: 1.3;
+}
+
+p {
+    font-family: var(--font-sans);
+    font-size: 1.1rem;
+    font-weight: 400;
+    line-height: 1.6;
+}
+
+button {
+    font-family: var(--font-sans);
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--color-light);
+    background: var(--color-background-green);
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+}
+
+.wrapper {
+    width: 95%;
+    margin: 0 auto;
+}
+
+.eq {
+    transition: 500ms cubic-bezier(0.25, 1, 0.5, 1);
 }
